baml_language/crates/baml_tests/snapshots/diagnostic_errors/void_return_type/baml_tests__diagnostic_errors__void_return_type__01_lexer__function_type_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Function"
Word "types"
Word "outside"
Word "immediate"
Word "callback-parameter"
Word "position"
Word "must"
Word "declare"
Slash "/"
Slash "/"
Backtick "`"
Throws "throws"
Backtick "`"
LParen "("
Word "E0151"
Comma ","
Word "TYPE_SYSTEM"
Dot "."
Word "md"
Word "rule"
IntegerLiteral "5"
RParen ")"
Semicolon ";"
Word "the"
Word "aliases"
Word "here"
Word "do"
Word "so"
Word "explicitly"
Dot "."
Slash "/"
Slash "/"
Word "Omission"
Word "coverage"
Word "lives"
In "in"
Word "the"
Word "function_type_missing_throws"
Word "project"
Dot "."
Word "type"
Word "ExplicitHandler"
Equals "="
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "never"
Word "type"
Word "ImplicitHandler"
Equals "="
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "never"
Word "type"
Word "HiddenHandler"
Equals "="
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "never"
Function "function"
Word "run_explicit"
LParen "("
Word "handler"
Colon ":"
Word "ExplicitHandler"
Comma ","
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "handler"
LParen "("
Word "value"
RParen ")"
RBrace "}"
Function "function"
Word "run_implicit"
LParen "("
Word "handler"
Colon ":"
Word "ImplicitHandler"
Comma ","
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "handler"
LParen "("
Word "value"
RParen ")"
RBrace "}"
Function "function"
Word "forward_direct"
LParen "("
Word "handler"
Colon ":"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Comma ","
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "handler"
LParen "("
Word "value"
RParen ")"
RBrace "}"
Function "function"
Word "forward_optional"
LParen "("
Word "handler"
Colon ":"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "never"
RParen ")"
Question "?"
Comma ","
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Question "?"
LBrace "{"
Word "handler"
QuestionDot "?."
LParen "("
Word "value"
RParen ")"
RBrace "}"
Function "function"
Word "run_hidden"
LParen "("
Word "handler"
Colon ":"
Word "HiddenHandler"
Comma ","
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "handler"
LParen "("
Word "value"
RParen ")"
RBrace "}"
Function "function"
Word "return_closure"
LParen "("
Word "handler"
Colon ":"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
RParen ")"
Arrow "->"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "never"
LBrace "{"
Return "return"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "handler"
LParen "("
Word "value"
RParen ")"
RBrace "}"
RBrace "}"
