baml_language/crates/baml_tests/snapshots/diagnostic_errors/void_return_type/baml_tests__diagnostic_errors__void_return_type__01_lexer__void_lambda.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Void"
Word "lambda"
Word "with"
Word "explicit"
Word "annotation"
Function "function"
Word "test_void_lambda"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "void"
LBrace "{"
RBrace "}"
Semicolon ";"
Word "f"
LParen "("
RParen ")"
Semicolon ";"
IntegerLiteral "1"
RBrace "}"
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "assigning"
Word "void"
Word "lambda"
Word "result"
Function "function"
Word "test_void_lambda_assign"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "void"
LBrace "{"
RBrace "}"
Semicolon ";"
Let "let"
Word "x"
Equals "="
Word "f"
LParen "("
RParen ")"
Semicolon ";"
IntegerLiteral "1"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Word "void"
Word "lambda"
Word "call"
Word "as"
Word "statement"
Function "function"
Word "test_void_lambda_stmt"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "void"
LBrace "{"
Word "x"
Semicolon ";"
RBrace "}"
Semicolon ";"
Word "f"
LParen "("
IntegerLiteral "42"
RParen ")"
Semicolon ";"
IntegerLiteral "1"
RBrace "}"
