baml_language/crates/baml_tests/snapshots/diagnostic_errors/void_return_type/baml_tests__diagnostic_errors__void_return_type__01_lexer__void_return_type.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Basic"
Word "void"
Function "function"
Error "—"
Word "empty"
Word "body"
Function "function"
Word "do_nothing"
LParen "("
RParen ")"
Arrow "->"
Word "void"
LBrace "{"
RBrace "}"
Slash "/"
Slash "/"
Word "Void"
Function "function"
Word "with"
Word "bare"
Return "return"
Function "function"
Word "do_return"
LParen "("
RParen ")"
Arrow "->"
Word "void"
LBrace "{"
Return "return"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Return "return"
Word "with"
Word "value"
In "in"
Word "void"
Function "function"
Function "function"
Word "do_bad_return"
LParen "("
RParen ")"
Arrow "->"
Word "void"
LBrace "{"
Return "return"
IntegerLiteral "42"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "assigning"
Word "void"
Function "function"
Word "result"
Function "function"
Word "use_void"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
Word "do_nothing"
LParen "("
RParen ")"
Semicolon ";"
IntegerLiteral "1"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Word "call"
Word "as"
Word "statement"
Error "—"
Word "should"
Word "be"
Word "fine"
Function "function"
Word "call_void"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "do_nothing"
LParen "("
RParen ")"
Semicolon ";"
IntegerLiteral "1"
RBrace "}"
Slash "/"
Slash "/"
Word "Void"
Function "function"
Word "with"
Word "side"
Word "effects"
LParen "("
Word "statements"
Comma ","
Word "no"
Word "tail"
RParen ")"
Function "function"
Word "side_effects"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "void"
LBrace "{"
Let "let"
Word "y"
Equals "="
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Word "y"
Semicolon ";"
RBrace "}"
